<resources>
    <string name="app_name">方向</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="tv_premium_car">整车保</string>
    <string name="tv_premium_personal">员工保</string>
    <string name="tv_premium_shop">商铺档口火灾保</string>
    <string name="price_value_unit">%.2f元</string>

    <!--投保人-->
    <string name="tv_insure_name">投保人</string>
    <string name="tv_insured_name">被保险人</string>
    <string name="tv_cargo_name">货物名称</string>
    <string name="tv_package_number">数量包装</string>
    <string name="tv_head_car_number">头车牌号</string>
    <string name="tv_trailer_car_number">挂车牌号</string>
    <string name="tv_freight_number">运单号</string>
    <string name="tv_insure_money">保险金额</string>
    <string name="tv_insure_rate">保险费率</string>
    <string name="tv_insure_lowest">最低保费：</string>
    <string name="tv_start_site">始发地</string>
    <string name="tv_end_site">目的地</string>

    <!--协调者布局-->
    <string name="cl_collapsing_toolbar_layout">CollapsingToolbarLayout(拉伸布局)</string>
    <string name="cl_toolbar_scroll_hide">Toolbar(滚动隐藏toolbar布局)</string>
    <string name="content">想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
    想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
        想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
        想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
        想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
        想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。
        想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。想结婚的就去结婚，想单身的就维持单身，反正到最后你们都要后悔。

    </string>
    <string name="third_material_edit_text">material_Edit_Text(关于edittext的控件)</string>
    <string name="system_share_normal">系统多图分享图片以及文字</string>
    <string name="system_share_weixin">分享到朋友圈</string>
    <string name="share_content">分享测试内容</string>
    <string name="share_error">分享失败</string>
    <string name="share_no_wechat">没有发现微信</string>
    <string name="wechat_nine">朋友圈九宫格</string>
</resources>
