<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#069acd"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_cl_collapsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cl_collapsing_toolbar_layout" />


    <Button
        android:id="@+id/btn_cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cl_toolbar_scroll_hide" />

    <Button
        android:id="@+id/btn_system_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_share_normal" />

</LinearLayout>